header dark mode sticky logo fix when justuno banner is displaying.
Former-commit-id: 1d0d993862dd3135cba0618901a9b2b1a90d4e8a
Former-commit-id: 1166a47e97071940acb6051e88110c0f6b48d85f

--- a/assets/component-cart-items.css
+++ b/assets/component-cart-items.css
@@ -314,6 +314,7 @@ cart-remove-button .icon-remove {
 
   .cart-items *.right {
     text-align: center;
+    padding: 0;
   }
 
   tr.cart-item td .price {
@@ -512,5 +513,8 @@ td.cart-item__price .product-option s{
 
 }
 
-
-
+@media screen and (max-width: 749px) {
+  tr.cart-item td {
+    padding-bottom: 0px;
+  }
+}
